--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-helmet": "^5.1.3",
     "react-md": "^1.0.18",
     "react-redux": "^5.0.2",
+    "react-redux-firebase": "^1.4.5",
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
